feat: Neural Workspace Hub & Collaborative Identity Synchronization Protocol
- Implemented centralized 'Workspace Hub' at /workspaces with full session history.
- Added rich collaborator metadata (Names + Avatars) to the neural registry.
- Orchestrated 'Neural Self-Destruct' termination with Admin-only authorization.
- Automated workspace audit and recovery sequence via startup event listeners.
- Integrated deep-mapped API projections for real-time teammate index.
- Upgraded document re-indexing and semantic purge capabilities.
- Perfected Command Center visibility with priority 'Live Portal' projection.